@@ -58,7 +58,7 @@ sub get_index_codes
 
 sub render_single_value
 {
-	my( $self, $session, $value, %render_opts ) = @_;
+	my( $self, $session, $value ) = @_;
 
 	return $session->html_phrase(
 		"lib/metafield:".($value eq "TRUE"?"true":"false") );
