@@ -50,11 +50,9 @@ sub get_sql_type
 
 sub render_single_value
 {
-	my( $self, $session, $value, %render_opts ) = @_;
+	my( $self, $session, $value ) = @_;
 
-	foreach( keys %render_opts ) { $render_opts{$_} = $self->{$_} unless defined $render_opts{$_}; }
-
-	my $res = $render_opts{res};
+	my $res = $self->{render_res};
 	my $l = 10;
 	$l = 7 if( defined $res && $res eq "month" );
 	$l = 4 if( defined $res && $res eq "year" );
@@ -192,13 +190,11 @@ sub form_value_basic
 
 sub get_unsorted_values
 {
-	my( $self, $session, $dataset, %render_opts ) = @_;
+	my( $self, $session, $dataset ) = @_;
 
 	my $values = $session->get_database->get_values( $self, $dataset );
 
-	$self->copy_in_render_opts( \%render_opts );
-
-	my $res = $render_opts{res};
+	my $res = $self->{render_res};
 
 	if( $res eq "day" )
 	{
@@ -414,7 +410,7 @@ sub get_property_defaults
 	my( $self ) = @_;
 	my %defaults = $self->SUPER::get_property_defaults;
 	$defaults{min_resolution} = "day";
-	$defaults{render_opts}->{res} = "day";
+	$defaults{render_res} = "day";
 	$defaults{text_index} = 0;
 	return %defaults;
 }
