@@ -60,7 +60,7 @@ sub get_sql_index
 
 sub render_single_value
 {
-	my( $self, $session, $value, %render_opts ) = @_;
+	my( $self, $session, $value ) = @_;
 
 	my $searchexp = $self->make_searchexp( $session, $value );
 	my $desc = $searchexp->render_description;
