@@ -78,7 +78,7 @@ sub render_value
 
 sub render_single_value
 {
-	my( $self, $session, $value, %render_opts ) = @_;
+	my( $self, $session, $value ) = @_;
 
 	return $session->html_phrase( 'lib/metafield/secret:show_value' );
 }
